<resources>
    <string name="app_name">14714플래너</string>
    <string name="admob_app_id">ca-app-pub-5474792033969123~1477577241</string>
    <string name="admob_banner_1">ca-app-pub-5474792033969123/6346760540</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="parent_plan_delete_ask_msg">
        현재 삭제하려는 계획은 원본 계획입니다. 이 계획으로
        만들어진 모든 반복계획은 삭제됩니다. 계속 진행하시려면
        "예"를 눌러주세요.
    </string>
    <string name="overwrite_content_org">
        경고!\n
        현재 수정하려는 계획은 원본계획입니다.\n
        이 계획으로부터 만들어진 모든 복습계획의\n
        내용이 현재 수정하려는 내용으로\n
        덮어씌워집니다.\n
        수정하시려면 확인을 눌러주세요.
    </string>

    <string name="app_introduction">
        주요기능\n
        1. 반복계획 자동생성\n
        2. 계획 복습 완수율 표시\n
        3. 게획을 미루거나, 앞당길 수 있음\n
        계획을 생성후에, 날짜를 클릭하고 미루거나 당기고싶은\n
        계획을 꾹 터치하세요, 3번 기능에는 여러가지 제약이 있습니다.\n
        1월 3일, 1월 4일, 1월7일\n
        1월 10일, 1월 17일에 계획이 생성되었다고 생각하겠습니다.\n
        1월 4일 계획을 1월 3일이나 그 이전날로 당길 수 없습니다\n
        1월 7일을 1월 4일로 당길 수 없는것도 마찬가지이며, 1월 7일의 계획을\n
        1월 5,6,7일로 당기는 것은 적법합니다.\n
        1월7일에서 일괄모드를 적용해서 1월6일로 당긴 후의 계획은 아래와 같습니다\n
        1월 3일, 1월 4일, 1월 6일, 1월 9일, 1월 16일로 바뀝니다.\n
        즉, 자신과 자신 이후의 모든 계획을 1일(1월7일-1월6일=1일) 당깁니다.\n

        미루기에 대해 설명하겠습니다.\n
        1월에 반복계획이 3, 4, 7, 10, 17일에 있다고 하겠습니다.(위와 동일)\n
        단일모드에서 3일 계획을 4일 이후로 미룰 수 없습니다.\n
        하지만, 일괄모드를 적용해서 3일 계획을 -> 5일로 미뤄보겠습니다.\n
        미룬후에 계획은 아래와 같이 변경됩니다.\n
        1월 : 5, 6, 9, 12, 19 (3일에서 5일가지 차이가 2일이기 때문에\n
        3일과 3일 이후의 계획은 모두 2일씩 밀립니다)\n

        업데이트 예정\n
        데이터 백업기능\n
        카테고리 추가기능(국어,수학,한국사,전공,교양 등등.. 사용자지정)\n
        글씨 색깔 커스터마이징\n\n\n\n\




    </string>
    <string name="welcome_message">
        안녕하세요!\n
        14714 플래너를 다운로드 해주셔서 감사합니다.\n
        현재 버전은 어플리케이션은 데이터 백업을 지원하지 않습니다\n
        따라서, 휴대폰 기기변경 시 기존에 생성하셨던 계획이\n
        모두 삭제되므로, 데이터 백업 기능 지원시까지 이 점 유의해주세요\n
        하단에, 어플정보를 누르시면 현재 버전에서 지원하는 기능과\n
        사용법 및 업데이트 예정관련 정보를 보실 수 있으므로\n
        사용전에 참고해주시기 바랍니다.

    </string>
    <string name="child_plan_delete_ask_msg">
        현재 삭제하려는 계획은 반복계획의 복사본 계획입니다.
        삭제는 현재 반복 계획만 삭제되며, 원본 계획 및 다른
        반복 계획은 영향을 받지 않습니다. 계속 진행하시려면
        "예"를 눌러주세요.
    </string>
    <string name="push_plan_msg">
        현재 계획을 아래의 날짜로 미룹니다.\n
        아래에서 일괄적용을 체크하면\n
        현재 계획 이후에 모든 계획들도 같은 일수만큼\n
        일괄적으로 미뤄집니다.\n
        일괄적용을 체크하지 않는다면\n
        현재의 계획만 미뤄집니다.\n
        이 경우에 미뤄지는 날짜는 다음 반복계획의 날짜와\n
        같은날 혹은 그 후의 날로 미룰 수 없습니다.
    </string>
    <string name="pull_plan_msg">
        현재 계획을 아래의 날짜까지 당깁니다.\n
        아래에서 일괄적용을 체크하면\n
        현재 계획 이후에 모든 계획들도 같은 일수만큼\n
        일괄적으로 당겨집니다.\n
        일괄적용을 체크하지 않는다면\n
        현재의 계획만 당겨집니다.\n
        이 경우에 당겨지는 날짜는 이전 반복계획의 날짜와\n
        같은날 혹은 그 전의 날로 미룰 수 없습니다.
    </string>
    <string name="invalid_move_attempt">
        현재 날짜보다 이전의 계획은 이동시킬 수 없습니다.
    </string>
    <string name="limit_date_template_string">
        단일적용시 최대/최소 가능한 날짜\n
    </string>
    <string name="limit_date_free">
        원하는 모든 날짜로 옮길 수 있습니다.
    </string>
    <string name="confirm_underline" translatable="false">
        <u>확인</u>
    </string>
    <string name="move_limit_msg">
        일괄적용시 최대 혹은 최소 가능한 날짜\n
    </string>
    <string name="invalid_move_plan_date">
        날짜 입력이 유효하지 않습니다. 위의 가이드를 참조해주세요
    </string>
    <string name="success_move_plan">
        계획 이동이 완료되었습니다.
    </string>
    <string name="exception_move_plan">
        시스템 오류로 계힉 이동에 실패했습니다.\n
        다시 시도해주세요.
    </string>
    <string name="calendar_tab">Calendar</string>
    <string name="setting_tab">Settings</string>
    <string name="donation_message">
        14714 스터디 플래너를 사용해주셔서 감사합니다. \n
        대학생이 학교를 다니면서 짬짬이 시간을 내서 만든 앱이라\n
        상용앱에 비해 디자인이나 오류가 많겠지만.\n
        건의/불편사항이나 어플 오류는 4whomtbts.dev@gmail.com에\n
        관련 내용을 문의하시면, 신속히 반영할 수 있도록 하겠습니다.\n
        이 스터디 플래너는 수험생이 주 사용자인 어플의 특성상 학업에\n
        방해가 되는 게임, 쇼핑몰같은 구글 자동광고(Admob)를 제외했습니다.\n
        이 플래너를 사용하시면서 도움이 되었다면\n
        아래의 계좌로 후원해주시면 감사합니다!\n
        신한은행 110-440-539157 예금주 ㄱㅎㅈ


    </string>
    <string name="app_info_tab">Info</string>
    <string name="confirm_button">확인</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="rate_now">Rate now</string>
    <string name="no_thanks">No Thanks</string>
    <string name="review_request_title">Please rate this app!</string>
    <string name="review_request_message">Do you like this app?\\n Please rate this app and write review about it!</string>
    <string name="app_setting_tab">Settings</string>
    <string name="repeat_plan_title">Plan title</string>
    <string name="repeat_plan_cycle">Cycle</string>
    <string name="make_new_cycle">Add cycle</string>
    <string name="create_plan_cycle_hint">Example : 1/4/7/14/30/90/120</string>
    <string name="create_plan_cycle_guide">
        You just type  term/term/term/../ like \n
        1/4/7/14. Do not contain any other white space \n
        or character. otherwise It would be fail.</string>
    <string name="cycle_plan_title">Cycle plan title</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="plan_cycle_editor_dialog_title_invalid">Title field cannot be empty.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_neg">Cycle should be greater than 0.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_empty">Cycle field cannot be empty.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_dup">Cycles cannot be mutually same.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_ordering">Ordering of Cycle should be ascending order.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_char">Valid character of Cycle field is either number or /</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_big_cycle">Every cycle should be equal or less than 730</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid_cycle_should_number">Cycle should be number</string>
    <string name="system_error_try_again">System error occurred, please try again.</string>
    <string name="plan_cycle_editor_dialog_cycle_invalid">Cycle field value is invalid.</string>
    <string name="delete_reask">Do you want to delete this?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="v1.2.0_title">V1.2.0 is launched.</string>
    <string name="v1.2.0_content">
        This is 1.2.0 version.\n
        1. You can customize your plan cycle!\n
           please check cycle plan selector\n
           when you make your review plan.\n
        2. Like (1), you could customize your category!\n

        I\'m currently making below features.

        1. You can make your 14714 study planner account.\n
        2. You can backup your plan.\n

        Thank you for using my work. \n
    </string>
    <string name="no_category">No category</string>
    <string name="category_spinner_dialog_category_name_invalid_empty">Category name cannot be empty.</string>
    <string name="category_spinner_editor_hint">New category name</string>
    <string name="category_title">Category title</string>
    <string name="cannot_delete_default_category" translatable="false">Cannot delete default category</string>
    <string name="plan_type_minimum">You should have more than one or more plan type.</string>
    <string name="plan_detail">Plan detail</string>
    <string name="should_change_category_in_org_plan">You could change category of plan in a original plan of it.</string>
    <string name="confirm_make_plan"><u>Save</u></string>
    <string name="select_all"><u>Select All</u></string>
    <string name="unselect_all" translatable="false"><u>Unselect All</u></string>
    <string name="select_remove"><u>Remove</u></string>
    <string name="add">Add</string>
    <string name="made_from_original_plan">is original plan of it</string>
    <string name="u_remove">Remove</string>
    <string name="u_pull">Pull</string>
    <string name="u_push">Push</string>
    <string name="u_cancel">Cancel</string>
    <string name="v1_2_2_title">1.2.2 released</string>
    <string name="v1_2_2_content">1.2.2 is released!</string>
    <string name="make_new_category">Add Category</string>
    <string name="v1_2_3_title" translatable="false">v1.2.3 release</string>
    <string name="v1_2_3_content">v1.2.3 release</string>
    <string name="pull">pull</string>
    <string name="push">push</string>
    <string name="v1_2_6_title">v.1.2.6 release</string>
    <string name="v1_2_6_content">1.2.6 is released!</string>
    <string name="voca_input">Vocabulary</string>
    <string name="voca_trans_input">Translation</string>
    <string name="voca_desc_input">Description</string>
    <string name="add_new_voca"><u>Add voca</u></string>
    <string name="today_voca">Today\'s vocas</string>
    <string name="review_voca">Review voca list</string>
    <string name="collapse">Collapse</string>
    <string name="voca_couldnt_be_empty">Vocabulary couldn\'t be empty string</string>
    <string name="modify">modify</string>
    <string name="voca_save_success">The Vocabulary saved.</string>
    <string name="vocabularies">Voca</string>
    <string name="v1_3_0_title">1.3.0</string>
    <string name="v1_3_0_content">1_3_0 released</string>

</resources>
