<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="VocaCreateExpandBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.example.evingPlanner.ui.singleDayDialog.CalendarDayDetailVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/voca_create_expanded_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_shape" >

        <TextView
            android:id="@+id/add_new_voca_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.example.evingPlanner.custom.ReSelectableSpinner
            android:id="@+id/cycle_selector"
            android:descendantFocusability="blocksDescendants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:overlapAnchor="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voca_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voca_input"
            app:layout_constraintTop_toBottomOf="@id/cycle_selector"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voca_trans_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/voca_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/voca_trans_input" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voca_desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/voca_trans_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/voca_desc_input" />

        <TextView
            android:id="@+id/collapse_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collapse"
            android:textColor="@color/interaction_text_color"
            android:textStyle="bold"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>