<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_plan_cycle_dialog_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_plan_cycle_dialog_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_plan_cycle_dialog_guideline2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_plan_cycle_dialog_title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cycle_plan_title"
            android:layout_marginBottom="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_plan_cycle_dialog_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/create_plan_cycle_dialog_guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_plan_cycle_dialog_guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_plan_cycle_guide" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_plan_cycle_dialog_guide_text"
        android:layout_marginBottom="14dp" >

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_plan_cycle_dialog_content_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_plan_cycle_hint" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>